Fix: pom.xml for tests

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <build>
+    <!-- <build>
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -95,6 +95,6 @@
             </plugin>
 
         </plugins>
-    </build>
+    </build> -->
 
 </project>
